# rest-framework-2

./: db.sqlite3  pyproject.toml
api/: permissions.py  urls.py  views.py
backend/: asgi.py  settings.py  urls.py  wsgi.py
products/: models.py  serializers.py  url.py  views.py
project/: settings.py
py_client/: basic.py
