[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["edwardcastle <sir.edwardcastle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django-cors-headers = "^3.11.0"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
requests = "^2.27.1"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
